--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Change history for Net-Easypost
 
 {{$NEXT}}
 
+0.05        2013-05-14
+            Fix post request method due to 
+                Mojo deprecation warnings
+
 0.04        2013-05-13
             Changed abstract
             Fixed dependency (Thanks Graham Knop)
