--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Change history for Net-Easypost
 
 {{$NEXT}}
 
+0.07        2013-05-16
+            Check carriers against a regex
+            For reals, make IO::Socket::SSL 
+                a dependency
+
 0.06        2013-05-15
             Make IO::Socket::SSL a prereq
             Check rate against regex
