--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Change history for Net-Easypost
 
 {{$NEXT}}
 
+0.08        2013-05-19
+            Seriously. Fix rate number test.
+
 0.07        2013-05-16
             Check carriers against a regex
             For reals, make IO::Socket::SSL 
