Updated dist.ini and Changelog

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Change history for Net-Easypost
 
 {{$NEXT}}
 
+0.10        2014-05-18
+            Updated Net::Easypost functionality to Easypost
+            API v2
+
 0.09        2013-07-31
             Don't be so clever when passed a hashref in get_rates
             (Fixes RT#87493)
