--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Change history for Net-Easypost
 
 {{$NEXT}}
 
+0.16        2015-12-29
+            - Minor changes, mostly formatting and build configuration
+            - Now have an explicit cpanfile and Makefile.PL in the release in case some don't want to use Dist::Zilla
 0.15        2015-03-18
 
 0.14        2015-03-04
